CMDB-1480 - If any errors occur while getting federated properties this error should be errors property of domain object
git-svn-id: http://www.ifountain.org/repos/os/RapidModules@7277 a08bcbf9-5f6c-4d33-af0a-e494bc2cacca

--- a/RcmdbCommons/grails-app/i18n/messages.properties
+++ b/RcmdbCommons/grails-app/i18n/messages.properties
@@ -19,11 +19,10 @@ default.property.name.invalid = Invalid property name[{0}] for Model [{1}].
 default.object.not.found = "[{0}] not found with id [{1}]"
 default.class.not.found = "Domain class with name [{0}] does not exist"
 
-default.federation.property.get.exception="Exception occurred while getting property [{0}] of domain class [{1}]. Reason:[{3}]"
-default.federation.property.conversion.exception="Exception occured while converting federated property [{0}] of domain class [{1}]. Reason:[{3}]"
-default.federation.property.datasource.not.exist="Datasource [{3}] for federated property [{0}] of domain class [{1}] is not defined."
-default.federation.property.datasource.exception="Exception occured while getting federated property [{0}] of [{1}].Reason:[{3}]"
-default.federation.get.properties.exception="Exception occured while getting federated properties of [{0}] from datasource [${1}].Reason:[{2}]"
+default.federation.property.conversion.exception="Exception occured while converting federated property [{0}] of domain class [{1}]. Reason:[{2}]"
+default.federation.property.datasource.not.exist="Datasource [{2}] for federated property [{0}] of domain class [{1}] is not defined."
+default.federation.property.datasource.exception="Exception occured while getting federated property [{0}] of [{1}] with getProperty method of [{2}].Reason:[{3}]"
+default.federation.property.get.properties.exception="Exception occured while getting federated property [{1}] of [{0}] with getProperties method of datasource [{2}]. Reason:[{3}]"
 
 default.couldnot.create = Could not create [{0}]. Reason [{1}]
 default.couldnot.delete = Could not delete [{0}] [{1}]. Please remove all references before deleting.
