CMDB-1356 - Implement missing integration tests for RsUser and RsGroup controllers
git-svn-id: http://www.ifountain.org/repos/os/RapidModules@7676 a08bcbf9-5f6c-4d33-af0a-e494bc2cacca

--- a/RcmdbCommons/grails-app/i18n/jsecurity.properties
+++ b/RcmdbCommons/grails-app/i18n/jsecurity.properties
@@ -1,5 +1,5 @@
 login.failed = Invalid username and/or password
 not.authorized=You do not have permission to access this url
 default.passwords.dont.match = Passwords don't match.
-default.oldpassword.dont.match = Old Password does't match.
+default.oldpassword.dont.match = Old Password doesn't match.
 no.group.specified = No groups specified for user.
