CMDB-1589 - implement uploader controller to upload a file from local machine to <rs_home>/RapidSuite/uploadedFiles dir
git-svn-id: http://www.ifountain.org/repos/os/RapidModules@7702 a08bcbf9-5f6c-4d33-af0a-e494bc2cacca

--- a/RcmdbCommons/grails-app/i18n/messages.properties
+++ b/RcmdbCommons/grails-app/i18n/messages.properties
@@ -36,6 +36,7 @@ default.missing.mandatory.parameter = Mandatory parameter {0} is missing.
 
 file.upload.exception= An exception occurred while uploading file {0}. Reason: {1}
 file.upload.file.not.specified = file parameter is not specified.
+file.upload.invalid.location = file {0} could not be written a directory outside of uploadedFiles
 
 script.compilation.error = Script [{2}] could not be compiled successfully. Reason : [{3}]
 script.cron.doesnt.match = Schedule [{2}] does not match cron expression pattern. Exception: [{3}]
