Refactored existing instance error messages, includes classname and object name
git-svn-id: http://www.ifountain.org/repos/os/RapidModules@8811 a08bcbf9-5f6c-4d33-af0a-e494bc2cacca

--- a/RcmdbCommons/grails-app/i18n/seachable.properties
+++ b/RcmdbCommons/grails-app/i18n/seachable.properties
@@ -2,7 +2,7 @@ invalid.search.query = Invalid search query [{0}]. Reason:[{1}]
 invalid.search.searchIn = Model [{0}] specified in searchIn parameter does not exist.
 rapidcmdb.invalid.relation.type = Invalid type [{0}]. Accepting instances of [{1}]
 rapidcmdb.relation.with.nonpersistant.object =  Cannot create relation with non-persistant object [{0}]
-rapidcmdb.invalid.instanceof.existing= Object with entered keys already exists for another Model [{1}] in the hierarchy
-rapidcmdb.instance.already.exist= Object with entered keys already exists with id [{0}].
+rapidcmdb.invalid.instanceof.existing= Object with entered keys already exists for another Model [{1}] Object [{2}] in the [{0}] hierarchy
+rapidcmdb.instance.already.exist= Object with entered keys already exists with for Model [{0}] Object [{2}] with id [{1}].
 rapidcmdb.invalid.property.type= [{1}] type value is expected for [{0}] of Model [{2}]
 default.query.not.found = SearchQuery not found with name [{0}]
