git-svn-id: http://www.ifountain.org/repos/os/RapidModules@8813 a08bcbf9-5f6c-4d33-af0a-e494bc2cacca

--- a/RcmdbCommons/grails-app/i18n/messages.properties
+++ b/RcmdbCommons/grails-app/i18n/messages.properties
@@ -19,6 +19,11 @@ default.property.name.invalid = Invalid property name[{0}] for Model [{1}].
 default.object.not.found = "[{0}] not found with id [{1}]"
 default.class.not.found = "Domain class with name [{0}] does not exist"
 
+default.not.greater.than =Property [{0}] of class [{1}] with value [{2}] should be greater than [{3}] 
+default.not.greater.than.or.equalto =Property [{0}] of class [{1}] with value [{2}] should be greater than or equal to [{3}]
+default.not.less.than =Property [{0}] of class [{1}] with value [{2}] should be less than [{3}]
+default.not.less.than.or.equalto =Property [{0}] of class [{1}] with value [{2}] should be less than or equal to [{3}]
+
 default.federation.property.conversion.exception=Exception occured while converting federated property [{0}] of domain class [{1}]. Reason:[{2}]
 default.federation.property.datasource.not.exist=Datasource [{2}] for federated property [{0}] of domain class [{1}] is not defined.
 default.federation.property.datasource.exception=Exception occured while getting federated property [{0}] of [{1}] with getProperty method of [{2}].Reason:[{3}]
