git-svn-id: http://www.ifountain.org/repos/os/RapidModules@8965 a08bcbf9-5f6c-4d33-af0a-e494bc2cacca

--- a/RcmdbCommons/grails-app/i18n/seachable.properties
+++ b/RcmdbCommons/grails-app/i18n/seachable.properties
@@ -6,3 +6,6 @@ rapidcmdb.invalid.instanceof.existing= Object with entered keys already exists f
 rapidcmdb.instance.already.exist= Object with entered keys already exists with for Model [{0}] Object [{2}] with id [{1}].
 rapidcmdb.invalid.property.type= [{1}] type value is expected for [{0}] of Model [{2}]
 default.query.not.found = SearchQuery not found with name [{0}]
+
+searchgroup.not.authorized = You are not authorized to add, update or delete public search query groups
+searchquery.not.authorized = You are not authorized to add, update or delete public search queries
