git-svn-id: http://www.ifountain.org/repos/os/RapidModules@8975 a08bcbf9-5f6c-4d33-af0a-e494bc2cacca

--- a/RcmdbCommons/grails-app/i18n/messages.properties
+++ b/RcmdbCommons/grails-app/i18n/messages.properties
@@ -33,6 +33,7 @@ default.federation.property.not.federated=Property [{0}] in model [{1}] is not a
 
 default.couldnot.create = Could not create [{0}]. Reason [{1}]
 default.couldnot.delete = Could not delete [{0}] [{1}]. Please remove all references before deleting.
+default.not.authorized = You are not authorized to do this action
 
 
 default.custom.error= Error: {0}
